examples/gke-ingress-example/admin-service.yaml
---
kind: Service
apiVersion: v1
metadata:
  name: traefik-admin-service
  namespace: kube-system
spec:
  selector:
    k8s-app: traefik-admin
  ports:
    - port: 8080
      name: admin
