examples/gke-ingress-example/ingress.yaml
---
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: traefik-ingress
  annotations:
    kubernetes.io/ingress.class: "gce"
spec:
  backend:
    serviceName: traefik-ingress-service
    servicePort: web
